social_oms_integration/force-app/main/default/objects/Order_Status_Update_Params__mdt/Order_Status_Update_Params__mdt.object-meta.xml
<CustomObject>
    <label>Order Status Update Param</label>
    <pluralLabel>Order Status Update Params</pluralLabel>
</CustomObject>