social_oms_integration/force-app/main/default/objects/Order_Status_Update_Params__mdt/fields/accesskey__c.field-meta.xml
<CustomField>
    <fullName>accesskey__c</fullName>
    <label>accesskey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>