social_oms_integration/force-app/main/default/objects/Order_Status_Update_Params__mdt/fields/API_Version__c.field-meta.xml
<CustomField>
    <fullName>API_Version__c</fullName>
    <label>API Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>