social_oms_integration/force-app/main/default/objects/Order_Status_Update_Params__mdt/fields/client_credential__c.field-meta.xml
<CustomField>
    <fullName>client_credential__c</fullName>
    <label>client_credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>