social_oms_integration/force-app/main/default/objects/Order_Status_Update_Params__mdt/fields/endpoint__c.field-meta.xml
<CustomField>
    <fullName>endpoint__c</fullName>
    <label>endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>