social_oms_integration/force-app/main/default/objects/Order_Status_Update_Params__mdt/fields/Order_Status_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Order_Status_Endpoint__c</fullName>
    <label>Order Status Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>