social_oms_integration/force-app/main/default/objects/Order_Status_Update_Params__mdt/fields/Site_Id__c.field-meta.xml
<CustomField>
    <fullName>Site_Id__c</fullName>
    <label>Site Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>